- Fixed checkbox alignment on person profile edit block
(cherry picked from commit dcbf19a8240eb37ae296eb2c1ee75db22a68bb34)

--- a/RockWeb/Styles/rock-components/checkbox.less
+++ b/RockWeb/Styles/rock-components/checkbox.less
@@ -99,6 +99,13 @@
   }
 }
 
+.radio-inline,
+.checkbox-inline {
+  label {
+    font-weight: 400;
+  }
+}
+
 // Mixin
 .custom-controls() {
   // radio buttons & checkboxes - fancy styling
@@ -126,6 +133,20 @@
     padding-right: 16px;
     padding-left: 30px;
     margin-left: 0;
+    label {
+      margin-bottom: 0;
+    }
+
+    .form-align & {
+      .max(@line-height-computed, (@custom-control-indicator-offset + @custom-control-indicator-size));
+      margin-top: (@input-height-base - @max) / 2;
+      margin-bottom: (@input-height-base - @max) / 2;
+
+      .radio-inline+.radio-inline, .checkbox-inline+.checkbox-inline {
+        .max(@line-height-computed, (@custom-control-indicator-offset + @custom-control-indicator-size));
+        margin-top: (@input-height-base - @max) / 2;
+      }
+    }
   }
 
   .radio,
